[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.poetry]
name = "xfuse"
version = "0.2.1"
description = "Deep spatial data fusion"
authors = ["Ludvig Bergenstråhle <ludvig.bergenstrahle@scilifelab.se>"]

[tool.poetry.dependencies]
click = "^7.1.2"
h5py = "^3.0.0"
imageio = "^2.9.0"
matplotlib = "^3.3.2"
opencv-python = "^4.4.0"
pandas = "^1.1.4"
pyro-ppl = ">=1.5.0,<1.6.0"
scikit-learn = "*"
scipy = "^1.5.4"
tensorboard = "^2.5.0"
tomlkit = "^0.7.0"
tifffile = "^2020.10.1"
tabulate = "^0.8.7"

[tool.poetry.scripts]
xfuse = "xfuse.__main__:cli"
